v1: add bootc reference to schema for creating and preserving image mode related information in blueprints
1. Adding the bootc reference to schema, because currently the user can't
create blueprint in Image mode in the UI.
2. Adding the image-mode placeholder into the possible distros - following a pattern from the frontend,
but that might be a questionable choice?
