# internal/v1/api.yaml
@@ -1074,6 +1074,8 @@ components:
           maxLength: 250
         distribution:
           $ref: '#/components/schemas/Distributions'
+        bootc:
+          $ref: '#/components/schemas/BootcBody'
         image_requests:
           type: array
           minItems: 1
@@ -1147,6 +1149,8 @@ components:
           $ref: "#/components/schemas/BlueprintLint"
         distribution:
           $ref: '#/components/schemas/Distributions'
+        bootc:
+          $ref: '#/components/schemas/BootcBody'
         image_requests:
           type: array
           minItems: 1
@@ -1171,6 +1175,8 @@ components:
           type: string
         distribution:
           $ref: '#/components/schemas/Distributions'
+        bootc:
+          $ref: '#/components/schemas/BootcBody'
         customizations:
           $ref: '#/components/schemas/Customizations'
         metadata:
@@ -1282,6 +1288,7 @@ components:
         - fedora-42
         - fedora-43
         - fedora-44
+        - image-mode
     ImageRequest:
       type: object
       additionalProperties: false
